--- a/templates/dashboard/offers.html
+++ b/templates/dashboard/offers.html
@@ -15,30 +15,8 @@
 {% endblock %}
 
 {% block content %}
-  <div class="modal fade" id="modal-new-link">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <form method="post" role="form">{% csrf_token %}
-          <div class="modal-header">
-            <h4 class="modal-title">New Smart Link</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            {% include 'dashboard/include/bs4_form.html' with form=form %}
-          </div>
-          <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Create</button>
-          </div>
-        </form>
-      </div>
-      <!-- /.modal-content -->
-    </div>
-    <!-- /.modal-dialog -->
-  </div>
-  <!-- /.modal -->
+
+  {% include "dashboard/include/_modal.html" %}
 
   <div class="card">
     <div class="card-header">
@@ -47,7 +25,7 @@
       <div class="card-tools">
         <ul class="pagination pagination-sm float-right">
           <li class="page-item">
-            <a class="page-link" href="#" data-toggle="modal" data-target="#modal-new-link">
+            <a class="create-offers page-link" href="#">
               <i class="fa fa-plus"></i> New
             </a>
           </li>
@@ -59,23 +37,31 @@
       <div class="dataTables_wrapper dt-bootstrap4">
         <div class="row">
           <div class="col-sm-12">
-            <table id="smart-links-table" class="table table-bordered table-hover">
+            <table id="offers-table" class="table table-bordered table-hover">
               <thead>
               <tr>
-                <th>User</th>
-                <th>Smart Link</th>
-                <th>Action</th>
+                <th class="text-center" scope="col">#</th>
+                <th class="text-center" scope="col">User</th>
+                <th class="text-center" scope="col">Smart Link</th>
+                <th class="text-center" scope="col">Action</th>
               </tr>
               </thead>
               <tbody>
               {% for smart_link in smart_links %}
                 <tr>
-                  <td>{{ smart_link.customer.email }}</td>
-                  <td>
+                  <td class="text-center" scope="row">{{ forloop.counter }}</td>
+                  <td class="text-center">{{ smart_link.customer.email }}</td>
+                  <td class="text-center">
                     <a href="{{ smart_link.smart_link }}" target="_blank">{{ smart_link.smart_link }}</a>
                   </td>
-                  <td><a href="{% url 'dashboard:link-delete' smart_link.id %}" onclick="return confirm('Are you sure?');"
-                         class="btn btn-block btn-danger">Delete</a></td>
+                  <td class="text-center">
+                    <button type="button" class="update-offers btn btn-sm btn-primary" data-id="{% url 'dashboard:update-offers' smart_link.pk %}">
+                      <span class="fa fa-pen"></span>
+                    </button>
+                    <button type="button" class="delete-offers btn btn-sm btn-danger" data-id="{% url 'dashboard:delete-offers' smart_link.pk %}">
+                      <span class="fa fa-trash"></span>
+                    </button>
+                  </td>
                 </tr>
               {% endfor %}
               </tbody>
@@ -92,15 +78,27 @@
   <script src="{% static 'plugins/datatables/jquery.dataTables.js' %}"></script>
   <script src="{% static 'plugins/datatables-bs4/js/dataTables.bootstrap4.js' %}"></script>
   <script src="{% static 'plugins/toastr/toastr.min.js' %}"></script>
+  <script src="{% static 'plugins/jquery.bootstrap.modal.forms.min.js' %}"></script>
   <script>
     $(function () {
-      $('#smart-links-table').DataTable({
+      $('#offers-table').DataTable({
         "paging": true,
         "lengthChange": false,
         "searching": false,
         "ordering": true,
         "info": true,
         "autoWidth": false,
+      });
+
+      // Create offers button
+      $(".create-offers").modalForm({formURL: "{% url 'dashboard:create-offers' %}"});
+      // Update offers buttons
+      $(".update-offers").each(function () {
+        $(this).modalForm({formURL: $(this).data('id')});
+      });
+      // Delete offers buttons
+      $(".delete-offers").each(function () {
+        $(this).modalForm({formURL: $(this).data('id')});
       });
     });
   </script>
