--- a/templates/dashboard/user-detail.html
+++ b/templates/dashboard/user-detail.html
@@ -95,10 +95,10 @@
                   <td class="text-center">{{ earning.leads }}</td>
                   <td class="text-center">$ {{ earning.money }}</td>
                   <td class="text-center">
-                    <button type="button" class="update-earnings btn btn-sm btn-primary" data-id="{% url 'dashboard:update-earning' earning.pk %}">
+                    <button type="button" class="update-earnings btn btn-sm btn-primary" data-id="{% url 'dashboard:update-earning' earning.pk customer.pk %}">
                       <span class="fa fa-pen"></span>
                     </button>
-                    <button type="button" class="delete-earnings btn btn-sm btn-danger" data-id="{% url 'dashboard:delete-earning' earning.pk %}">
+                    <button type="button" class="delete-earnings btn btn-sm btn-danger" data-id="{% url 'dashboard:delete-earning' earning.pk customer.pk %}">
                       <span class="fa fa-trash"></span>
                     </button>
                   </td>
@@ -154,15 +154,13 @@
                     <span class="badge {% if payment.status == 'paid' %}badge-info{% else %}badge-danger{% endif %}">{{ payment.status }}</span>
                   </td>
                   <td class="text-center">
-                    <button type="button" class="update-payments btn btn-sm btn-primary" data-id="{% url 'dashboard:update-payment' payment.pk %}">
+                    <button type="button" class="update-payments btn btn-sm btn-primary" data-id="{% url 'dashboard:update-payment' payment.pk customer.pk %}">
                       <span class="fa fa-pen"></span>
                     </button>
-                    <button type="button" class="delete-payments btn btn-sm btn-danger" data-id="{% url 'dashboard:delete-payment' payment.pk %}">
+                    <button type="button" class="delete-payments btn btn-sm btn-danger" data-id="{% url 'dashboard:delete-payment' payment.pk customer.pk %}">
                       <span class="fa fa-trash"></span>
                     </button>
                   </td>
-{#                  <td><a href="{% url 'dashboard:payment-delete' payment.id customer.pk %}" onclick="return confirm('Are you sure?');"#}
-{#                           class="btn btn-block btn-danger">Delete</a></td>#}
                 </tr>
               {% endfor %}
               </tbody>
@@ -200,7 +198,7 @@
       });
 
       // Create earnings button
-      $(".create-earnings").modalForm({formURL: "{% url 'dashboard:create-earning' %}"});
+      $(".create-earnings").modalForm({formURL: "{% url 'dashboard:create-earning' slug=customer.pk %}"});
       // Update earnings buttons
       $(".update-earnings").each(function () {
         $(this).modalForm({formURL: $(this).data('id')});
@@ -211,7 +209,7 @@
       });
 
       // Create payments button
-      $(".create-payments").modalForm({formURL: "{% url 'dashboard:create-payment' %}"});
+      $(".create-payments").modalForm({formURL: "{% url 'dashboard:create-payment' slug=customer.pk %}"});
       // Update payments buttons
       $(".update-payments").each(function () {
         $(this).modalForm({formURL: $(this).data('id')});
