--- a/templates/dashboard/include/sidebar.html
+++ b/templates/dashboard/include/sidebar.html
@@ -27,7 +27,7 @@
       </li>
 
       <li class="nav-item">
-        <a href="{% url 'dashboard:support' %}" class="nav-link{% if active == 'Support' %} active{% endif %}">
+        <a href="{% url 'dashboard:support-manager' %}" class="nav-link{% if active == 'Support' %} active{% endif %}">
           <i class="nav-icon fas fa-envelope"></i>
           <p>Support</p>
         </a>
@@ -51,6 +51,13 @@
         <a href="{% url 'dashboard:payments' %}" class="nav-link{% if active == 'Payments' %} active{% endif %}">
           <i class="nav-icon fas fa-toolbox"></i>
           <p>Payments</p>
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a href="{% url 'dashboard:support' %}" class="nav-link{% if active == 'Support' %} active{% endif %}">
+          <i class="nav-icon fas fa-envelope"></i>
+          <p>Support</p>
         </a>
       </li>
     {% endif %}
