--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,10 @@
+.errorlist {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  color: red;
+  font-size: 14px;
+}
 .section-hero {
   position: relative;
   background-image: url("../img/image01.jpg");
