Redirect to sign up page when clicking buttons in home page

--- a/templates/profiles/home.html
+++ b/templates/profiles/home.html
@@ -10,7 +10,7 @@
       <h1 class="big-title">MummyMonetize</h1>
       <h3 class="small-title">Our smartlink boost conversion rates and profits while doing all the work hard for
         you.Join over 10 000 other affiliates and monetize your traffic!</h3>
-      <a href="#" class="btn-join">Join</a>
+      <a href="{% url 'profiles:signup' %}" class="btn-join">Join</a>
     </div>
   </div>
   <div class="row section-banner">
@@ -18,14 +18,14 @@
     <div class="col-md-6 col-sm-12 text-center banner-texts">
       <div class="banner-title-wrapper">
         <h4 class="small-title">GET IN TOUCH WITH ONE OF OUR MANAGERS AND GET ALL THE ANSWERS YOU MAY HAVE</h4>
-        <a href="#" class="btn-join">Join</a>
+        <a href="{% url 'profiles:signup' %}" class="btn-join">Join</a>
       </div>
     </div>
   </div>
   <div class="row section-parallax">
     <div class="text-center section-titles-wrapper">
       <h4 class="small-title">GET IN TOUCH WITH ONE OF OUR MANAGERS AND GET ALL THE ANSWERS YOU MAY HAVE</h4>
-      <a href="#" class="btn-join">Contact Us</a>
+      <a href="{% url 'profiles:signup' %}" class="btn-join">Contact Us</a>
     </div>
   </div>
 {% endblock content %}
